java-note update

--- a/多线程/理论基础.md
+++ b/多线程/理论基础.md
@@ -1,4 +1,26 @@
-# 并发基础理论
+# 理论基础
+
+## 进程(Process)与线程(Thread)
+
+进程和线程是最常提到的概念了。在linux中，**线程与进程最大的区别就是是否共享同一块地址空间，而且共享同一块地址空间的那一组线程将显现相同的PID号。**下面介绍下两者的概念：
+
+- 进程是操作系统进行资源分配和调度的最小单元，可以简单地理解为系统中运行的一个程序就是一个进程。
+- 线程是CPU调度的最小单元，是进程中的一个个执行流程。
+- 一个进程至少包含一个线程，可以包含多个线程，这些线程共享这个进程的资源（比如堆区和方法区资源）。同时每个线程都拥有独立的运行栈和程序计数器，线程切换开销小。
+- 多进程指的是操作系统同时运行多个程序，如当前操作系统中同时运行着QQ、IE、微信等程序。
+- 多线程指的是同一进程中同时运行多个线程，如迅雷运行时，可以开启多个线程，同时进行多个文件的下载。
+
+谈到线程和进程，又势必会涉及到线程号和进程号的概念。下面列举了各个ID的概念。
+
+- pid: 进程ID。
+- tgid: 线程组ID，也就是线程组leader的进程ID，等于pid。
+- lwp: 线程ID。在用户态的命令(比如ps)中常用的显示方式。
+- tid: 线程ID，等于lwp。tid在系统提供的接口函数中更常用，比如syscall(SYS_gettid)和syscall(__NR_gettid)。
+
+## 并行(Parallel)、并发(Concurrent)
+
+- **并发**：是指多个线程任务在同一个CPU上快速地轮换执行，由于切换的速度非常快，给人的感觉就是这些线程任务是在同时进行的，但其实并发只是一种逻辑上的同时进行；
+- **并行**：是指多个线程任务在不同CPU上同时进行，是真正意义上的同时执行。
 
 ## 为什么需要多线程
 
@@ -93,9 +115,42 @@ public void run() {
 }
 ```
 
+## 上下文切换
 
+线程在CPU上运行之前需要CPU给这个线程分配时间片，当时间片运行完之后这个线程就会让出CPU资源给其他的线程运行。但是线程在将CPU资源让出之前会保存当前的任务状态以便下次获得CPU资源之后可以继续往下执行。所以线程从保存当前执行状态到再加载的过程称为一次上下文切换。
+
+![image-20231205144030711](C:\Users\Lenovo\AppData\Roaming\Typora\typora-user-images\image-20231205144030711.png)
+
+**减少上下文切换的措施**
+
+- 无锁并发编程。多线程竞争锁时，会引起上下文切换，所以多线程处理数据时，可以用一些办法来避免使用锁，如将数据的ID按照Hash算法取模分段，不同的线程处理不同段的数据。
+- CAS算法。Java的Atomic包使用CAS算法来更新数据，而不需要加锁。
+- 使用最少线程。避免创建不需要的线程，比如任务很少，但是创建了很多线程来处理，这样会造成大量线程都处于等待状态。
+- 协程：在单线程里实现多任务的调度，并在单线程里维持多个任务间的切换。
+
+### 什么原因会导致上下文切换
+
+![image-20231205144551705](https://gitee.com/shanghuo11/picture/raw/master/img/image-20231205144551705.png)
+
+结合图示可知，线程主要有 NEW、RUNABLE、BLOCKED、WAITING、TIMED_WAITING、TERMINADTED 等 6 种状态。
+
+在这个运行过程中，线程由 RUNNABLE 转为非 RUNNABLE 的过程就是线程上下文切换。抛开新建和死亡状态，从上面的图中可以看出：上下文切换主要发生在RUNABLE状态和BLOCKED、WAITING、TIMED_WAITING这些状态的互相转换之间。
+
+举个列子，一个线程的状态由 RUNNING 转为 BLOCKED ，再由 BLOCKED 转为 RUNNABLE ，然后再被调度器选中执行，这就是一个上下文切换的过程。
+
+通过线程的运行状态以及状态间的相互切换，我们可以了解到，**多线程的上下文切换实际上就是由多线程两个运行状态的互相切换导致的**。
+
+根据上面的分析，我们可以总结出导致上下文切换的几个原因：
+
+- CPU时间片用完，导致正常的上下文切换;
+- sleep()、wait()、yield()、join()、park()、synchronized、lock这些方法或者关键字会导致线程状态的转换，所以这些方法的调用也会导致上下文的切换；（需要注意的是这些方法的调用虽然后导致上下文切换，但是并不会占用CPU资源，也就是说并不会提升CPU使用率）；
+- 另外，JVM虚拟机在进行垃圾回收时，会进行STOP-THE-WORLD，这个操作会暂停所有Java线程，垃圾收集完之后线程再进入工作状态，其实这个也是一种上下文切换操作。
 
 ## 线程安全
+
+**如果线程的随机调度顺序不影响某段代码的最后执行结果，那么我们认为这段代码是线程安全的**。
+
+为了保证代码的线程安全，Java中推出了很多好用的工具类或者关键字，比如volatile、synchronized、ThreadLocal、锁、并发集合、线程池和CAS机制等。
 
 线程安全不是一个非真即假的命题，可以将共享数据按照安全程度的强弱顺序分成以下五类: 不可变、绝对线程安全、相对线程安全、线程兼容和线程对立。
 
