java-note update

--- a/多线程/并发基础.md
+++ b/多线程/并发基础.md
@@ -203,13 +203,237 @@ public class InterruptExample {
 }
 ```
 
+## Object的wait、notify和notifyAll方法
+
+### wait方法
+
+当一个线程调用一个共享变量的wait（）方法时，该调用线程会被阻塞挂起（进入waiting状态），直到发生下面几件事情之一才能返回：
+
+- 其他线程调用了该共享对象的notify（）或者notifyAll（）方法；
+- 其他线程调用了该线程的interrupt（）方法，该线程抛出InterruptedException异常返回。
+
+**另外需要注意的是，如果调用wait（）方法的线程没有事先获取该对象的监视器锁，则调用wait（）方法时调用线程会抛出IllegalMonitorStateException异常。如果当前线程已经获取了锁资源，调用wait方法之后会释放这个锁资源，但是只会释放当前共享变量上的锁，如果当前线程还持有其他共享变量的锁，则这些锁是不会被释放的**。
+
+wait方法还有一个重载方法wait（long time）,这个方法会等待time时间，如果在这个时间内没有其他线程来唤醒它的话，这个线程会自己唤醒继续获得执行机会。
+
+### notify和notifyAll方法
+
+notify方法会唤醒等待对象监视器的单个线程，如果等待对象监视器的有多个线程，则**选取其中一个线程进行唤醒，到底选择唤醒哪个线程是任意的，由CPU自己决定**。如果没有再调用notify方法，其他阻塞的线程可能就永远得不到再执行的机会了。
+
+此外，被唤醒的线程不能马上从wait方法返回并继续执行，它必须在获取了共享对象的监视器锁后才可以返回，也就是唤醒它的线程释放了共享变量上的监视器锁后，被唤醒的线程也不一定会获取到共享对象的监视器锁，这是因为该线程还需要和其他线程一起竞争该锁，只有该线程竞争到了共享变量的监视器锁后才可以继续执行。
+
+一个还需要注意的地方是，在共享变量上调用notifyAll()方法只会唤醒调用这个方法前调用了wait系列函数而被放入共享变量等待集合里面的线程。如果调用notifyAll()方法后一个线程调用了该共享变量的wait()方法而被放入阻塞集合，则该线程是不会被唤醒的
+
+类似wait系列方法，只有当前线程获取到了共享变量的监视器锁后，才可以调用共享变量的notify()方法，否则会抛出IllegalMonitorStateException异常。
+
+notify方法还有个兄弟方法notifyAll，这个方法会唤醒所有等待监视器对象的线程。
+
+### wait-notify模式的典型应用
+
+wait-notify模式的一个典型应用就是可以实现生产者-消费者模式。题目：
+
+> 有一个苹果箱，有10个人向这个箱子中每次随机放入一个苹果，有10个人每次随机从这个箱子中随机拿走一个苹果，同时需要满足箱子中的苹果总数不能超过50个。请用代码实现上面的场景（不能使用并发集合框架）
+
+```java
+public class AppleBox {
+
+    private int appleCount;
+
+    public synchronized void putApple() {
+        while (appleCount >= 50) {
+            try {
+                //会释放锁
+                this.wait();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+        appleCount++;
+        String name = Thread.currentThread().getName();
+        System.out.println("[" + name + "]放入一个,当前盒子中苹果数:" + appleCount);
+        this.notifyAll();
+    }
 
 
+    public synchronized void takeApple() {
+        while (appleCount <= 0) {
+            try {
+                //会释放锁
+                this.wait();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+        appleCount--;
+        String name = Thread.currentThread().getName();
+        System.out.println("[" + name + "]拿走一个,当前盒子中苹果数:" + appleCount);
+        this.notifyAll();
+    }
+
+    private static class AppleTaker implements Runnable {
+
+        private AppleBox appleBox;
+
+        public AppleTaker(AppleBox appleBox) {
+            this.appleBox = appleBox;
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                appleBox.takeApple();
+                try {
+                    TimeUnit.MILLISECONDS.sleep(100);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
 
 
+    private static class ApplePutter implements Runnable {
+
+        private AppleBox appleBox;
+
+        public ApplePutter(AppleBox appleBox) {
+            this.appleBox = appleBox;
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                appleBox.putApple();
+                try {
+                    TimeUnit.MILLISECONDS.sleep(100);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
 
 
+    public static void main(String[] args) {
+        AppleBox appleBox = new AppleBox();
 
+        for (int i = 0; i < 20; i++) {
+            Thread t = new Thread(new ApplePutter(appleBox));
+            t.setName("ApplePutter:" + i);
+            t.start();
+        }
+
+        for (int i = 0; i < 20; i++) {
+            Thread t = new Thread(new AppleTaker(appleBox));
+            t.setName("AppleTaker:" + i);
+            t.start();
+        }
+
+    }
+}
+```
+
+### wait-notify模式的经典写法
+
+生产者和消费者的逻辑都可以统一抽象成以下几个步骤：
+
+- step1：获得对象的锁；
+- step2：循环判断是否需要进行生产活动，如果不需要进行生产就调用wait方法，暂停当前线程；如果需要进行生产活动，进行对应的生产活动；
+- step3：通知等待线程
+
+伪代码如下：
+
+```java
+synchronized(对象) {
+    //这边进行循环判断的原因是为了防止伪唤醒，也就是不是消费线程或者生产线程调用notify方法将waiting线程唤醒的
+    while(条件){
+        对象.wait();
+    }
+    //进行生产或者消费活动
+    doSomething();
+    对象.notifyAll();
+}
+```
+
+## ThreadLocal类
+
+### ThreadLocal简介
+
+ThreadLocal有点类似于Map类型的数据变量。ThreadLocal类型的变量每个线程都有自己的一个副本，某个线程对这个变量的修改不会影响其他线程副本的值，可以说ThreadLocal为我们提供了一个保证线程安全的新思路。需要注意的是一个ThreadLocal变量，其中只能set一个值。
+
+```java
+ThreadLocal<String> localName = new ThreadLocal();
+localName.set("name1");
+String name = localName.get();
+```
+
+在线程1中初始化了一个ThreadLocal对象localName，并通过set方法，保存了一个值,同时在线程1中通过 localName.get()可以拿到之前设置的值，但是如果在线程2中，拿到的将是一个null。
+
+### ThreadLocal数据结构
+
+![image-20231207154255489](C:\Users\Lenovo\AppData\Roaming\Typora\typora-user-images\image-20231207154255489.png)
+
+`Thread`类有一个类型为`ThreadLocal.ThreadLocalMap`的实例变量`threadLocals`，也就是说每个线程有一个自己的`ThreadLocalMap`。
+
+`ThreadLocalMap`有自己的独立实现，可以简单地将它的`key`视作`ThreadLocal`，`value`为代码中放入的值（实际上`key`并不是`ThreadLocal`本身，而是它的一个**弱引用**）。
+
+每个线程在往`ThreadLocal`里放值的时候，都会往自己的`ThreadLocalMap`里存，读也是以`ThreadLocal`作为引用，在自己的`map`里找对应的`key`，从而实现了**线程隔离**。
+
+我们还要注意`Entry`， 它的`key`是`ThreadLocal<?> k` ，继承自`WeakReference`， 也就是我们常说的弱引用类型。
+
+### GC之后是否被回收以及内存泄漏问题
+
+#### Java四种引用类型
+
+**强引用**：我们常常 new 出来的对象就是强引用类型，只要强引用存在，垃圾回收器将永远不会回收被引用的对象，哪怕内存不足的时候
+
+**软引用**：使用 SoftReference 修饰的对象被称为软引用，软引用指向的对象在内存要溢出的时候被回收
+
+**弱引用**：使用 WeakReference 修饰的对象被称为弱引用，只要发生垃圾回收，若这个对象只被弱引用指向，那么就会被回收
+
+**虚引用**：虚引用是最弱的引用，在 Java 中使用 PhantomReference 进行定义。虚引用中唯一的作用就是用队列接收对象即将死亡的通知
+
+#### 内存泄漏分析
+
+当在做 `ThreadLocal.get()` 操作，证明其实还是有**强引用**存在的，所以 `key` 并不为 `null`，不会被回收，但如果**强引用**不存在的话，那么 `key` 就会被回收，也就是会出现 `value` 没被回收，`key` 被回收，导致 `value` 永远存在，出现==内存泄漏==。
+
+### ThreadLocalMapHash 算法
+
+既然是`Map`结构，那么`ThreadLocalMap`当然也要实现自己的`hash`算法来解决散列表数组冲突问题。
+
+```java
+int i = key.threadLocalHashCode & (len-1);
+```
+
+`ThreadLocalMap`中`hash`算法很简单，这里`i`就是当前 key 在散列表中对应的数组下标位置。
+
+这里最关键的就是`threadLocalHashCode`值的计算，`ThreadLocal`中有一个属性为`HASH_INCREMENT = 0x61c88647`
+
+每当创建一个`ThreadLocal`对象，这个`ThreadLocal.nextHashCode` 这个值就会增长 `0x61c88647` 。
+
+这个值很特殊，它是**斐波那契数** 也叫 **黄金分割数**。`hash`增量为 这个数字，带来的好处就是 `hash` **分布非常均匀**。
+
+### 最佳实践
+
+在不使用的时候，主动调用remove方法进行清理。这里给出一个建议方案：
+
+```java
+
+public class Dynamicxx {
+    
+    private static final ThreadLocal<String> contextHolder = new ThreadLocal<>();
+
+    public void dosomething(){
+        try {
+             contextHolder.set("name");
+            // 其它业务逻辑
+        } finally {
+            contextHolder .remove();
+        }
+    }
+
+}
+```
 
 ## 基础线程机制
 
@@ -232,25 +456,6 @@ public static void main(String[] args) {
     executorService.shutdown();
 }
 ```
-
-### Daemon
-
-守护线程是程序运行时在后台提供服务的线程，不属于程序中不可或缺的部分。
-
-当所有非守护线程结束时，程序也就终止，同时会杀死所有守护线程。
-
-main() 属于非守护线程。
-
-使用 setDaemon() 方法将一个线程设置为守护线程。
-
-```java
-public static void main(String[] args) {
-    Thread thread = new Thread(new MyRunnable());
-    thread.setDaemon(true);
-}
-```
-
-
 
 ### Executor 的中断操作
 
