--- a/多线程/理论基础.md
+++ b/多线程/理论基础.md
@@ -128,11 +128,28 @@ public void run() {
 - 使用最少线程。避免创建不需要的线程，比如任务很少，但是创建了很多线程来处理，这样会造成大量线程都处于等待状态。
 - 协程：在单线程里实现多任务的调度，并在单线程里维持多个任务间的切换。
 
+### 线程状态
+
+![image-20231207101309581](C:\Users\Lenovo\AppData\Roaming\Typora\typora-user-images\image-20231207101309581.png)
+
+- 新建状态（New）： 新创建了一个线程对象，还未调用线程的start()方法。
+- 就绪状态（Runnable）： 线程对象创建后，其他线程调用了该对象的start()方法，该状态的线程位于可运行线程池中，变得可运行，等待获取CPU的使用权。
+- 运行状态（Running）：就绪状态的线程获取了CPU，执行程序代码的状态，还有种可能就是这个线程正在等待其他的系统资源（IO资源等），这种状态也称为Running状态。**需要注意的是，通过Thread::getStatus查看状态时，Runnable状态和Running统一称为Runnable状态。**
+- 阻塞状态（Blocked）：一个线程因为等待监视锁而被阻塞的状态，也称之为阻塞状态。**阻塞的线程不会被分配CPU资源**。
+- 等待状态（WAITING）：一个正在等待的线程的状态，也称之为等待状态。造成线程等待的原因有三种，分别是调用Object.wait()、join()以及LockSupport.park()方法。处于等待状态的线程，正在等待其他线程去执行一个特定的操作。例如：因为wait()而等待的线程正在等待另一个线程去调用notify()或notifyAll()；一个因为join()而等待的线程正在等待另一个线程结束。**处于等待状态的线程不会被分配CPU资源**。
+- 超时等待（TIMED_WAITING）：一个在限定时间内等待的线程的状态。也称之为限时等待状态。造成线程限时等待状态的原因有五种，分别是：Thread.sleep(long)、Object.wait(long)、join(long)、LockSupport.parkNanos(obj,long)和LockSupport.parkUntil(obj,long)。
+- 死亡状态（Dead）：线程执行完了或者因异常退出了run()方法，该线程结束生命周期(当时如果线程被持久持有, 可能不会被回收)。
+
+#### 三种阻塞状态的对比
+
+TIMED_WAITING 和 WAITING 区别在于多了超时等待参数，结束后回到Running状态（就绪或运行中）。而**Blocked状态是指一个阻塞线程在等待monitor锁**，通常是当线程调用同步方法时，在没有获取到锁的情况下，线程将会进入到阻塞状态。  
+
+- synchronized：线程等待进入synchronized同步方法。线程等待进入synchronized同步代码块。
+- Lock：线程等待进入Lock同步段。
+
 ### 什么原因会导致上下文切换
 
-![image-20231205144551705](https://gitee.com/shanghuo11/picture/raw/master/img/image-20231205144551705.png)
-
-结合图示可知，线程主要有 NEW、RUNABLE、BLOCKED、WAITING、TIMED_WAITING、TERMINADTED 等 6 种状态。
+结合上图示可知，线程主要有 NEW、RUNABLE、BLOCKED、WAITING、TIMED_WAITING、TERMINADTED 等 6 种状态。
 
 在这个运行过程中，线程由 RUNNABLE 转为非 RUNNABLE 的过程就是线程上下文切换。抛开新建和死亡状态，从上面的图中可以看出：上下文切换主要发生在RUNABLE状态和BLOCKED、WAITING、TIMED_WAITING这些状态的互相转换之间。
 
