--- a/多线程/锁相关.md
+++ b/多线程/锁相关.md
@@ -1,2 +1,76 @@
 # 锁相关
 
+## 锁分类
+
+### 乐观锁和悲观锁
+
+悲观锁和乐观锁其实只是一类概念（对某类具体锁的总称），不是某种语言或是某个技术独有的锁技术。
+
+**乐观锁**是一种乐观思想，即认为读多写少，遇到并发写的可能性低，每次去拿数据的时候都认为别人不会修改，所以不会上锁，但是在更新的时候会判断一下在此期间别人有没有去更新这个数据，采取在写时先读出当前版本号，然后加锁操作（比较跟上一次的版本号，如果一样则更新），如果失败则要重复读-比较-写的操作。java中的乐观锁基本都是通过CAS操作实现的，CAS是一种更新的原子操作，比较当前值跟传入值是否一样，一样则更新，否则失败。数据库中的共享锁也是一种乐观锁。
+
+**悲观锁**是就是悲观思想，即认为写多，遇到并发写的可能性高，每次去拿数据的时候都认为别人会修改，所以每次在读写数据的时候都会上锁，这样别人想读写这个数据就会block直到拿到锁。java中典型的悲观锁就是Synchronized,AQS框架下的锁则是先尝试cas乐观锁去获取锁，获取不到，才会转换为悲观锁，如ReentrantLock。数据库中的排他锁也是一种悲观锁。
+
+### 公平锁和非公平锁
+
+根据线程获取锁的抢占机制，锁可以分为公平锁和非公平锁，公平锁表示线程获取锁的顺序是按照线程请求锁的时间早晚来决定的，也就是最早请求锁的线程将最早获取到锁。而非公平锁则在运行时闯入，也就是先来不一定先得。
+
+ReentrantLock提供了公平和非公平锁的实现。
+
+- 公平锁：`ReentrantLock pairLock = new ReentrantLock（true）`。
+- 非公平锁：`ReentrantLock pairLock = new ReentrantLock（false）`。如果构造函数不传递参数，则默认是非公平锁。
+
+在没有公平性需求的前提下尽量使用非公平锁，因为公平锁会带来性能开销。
+
+### 独占锁和共享锁
+
+根据锁只能被单个线程持有还是能被多个线程共同持有，锁可以分为独占锁和共享锁。
+
+独占锁保证任何时候都只有一个线程能得到锁，`ReentrantLock`就是以独占方式实现的。共享锁则可以同时由多个线程持有，例如`ReadWriteLock`读写锁，它允许一个资源可以被多线程同时进行读操作。
+
+独占锁是一种悲观锁，由于每次访问资源都先加上互斥锁，这限制了并发性，因为读操作并不会影响数据的一致性，而独占锁只允许在同一时间由一个线程读取数据，其他线程必须等待当前线程释放锁才能进行读取。
+
+共享锁则是一种乐观锁，它放宽了加锁的条件，允许多个线程同时进行读操作。
+
+### 可重入锁
+
+可重入锁，也叫做 **递归锁**，从名字上理解，字面意思就是再进入的锁，重入性是指任意线程在获取到锁之后能够再次获取该锁而不会被锁阻塞，首先他需要具备两个条件：
+
+1. **线程再次获取锁**：所需要去识别获取锁的线程是否为当前占据锁的线程，如果是，则再次获取成功
+2. **锁的最终释放**：线程重复n次获取了锁，随后在第n次释放该锁后，其它线程能够获取到该锁。锁的最终释放要求锁对于获取进行计数自增，计数表示当前线程被重复获取的次数，而被释放时，计数自减，当计数为0时表示锁已经成功释放。
+
+`ReenTrantLock` 和 `synchronized`都是可重入锁，前者是是JDK实现的，后者是依赖于JVM实现的，区别不大。
+
+### 自旋锁
+
+自旋锁（spinlock）：是指当一个线程在获取锁的时候，如果锁已经被其它线程获取，那么该线程将循环等待，然后不断的判断锁是否能够被成功获取，直到获取到锁才会退出循环。
+获取锁的线程一直处于活跃状态，但是并没有执行任何有效的任务，使用这种锁会造成 busy-waiting。
+
+自旋锁的优点
+
+- 不需要做内核态和用户态之间的切换进入阻塞状态，它们只需要等一等(自旋)，等到持有锁的线程释放锁之后即可获取，这样就==避免了用户进程和内核切换的消耗==。
+
+存在的问题
+
+- 如果某个线程持有锁的时间过长，就会导致其它等待获取锁的线程进入循环等待，消耗CPU。使用不当会造成CPU使用率极高。
+- 自旋锁不是公平的，即无法满足等待时间最长的线程优先获取锁。不公平的锁就会存在“线程饥饿”问题。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
